# pg_lake

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Makefile  Pipfile  README.md  SESSION_CONTEXT.md  install.sh  test_issue_215.sql
.github/: CODEOWNERS  repo_meta.yaml
docker/: Dockerfile  LOCAL_DEV.md  README.md  TASKFILE.md  Taskfile.yml  docker-compose.yml
docs/: README.md  building-from-source.md  data-lake-import-export.md  ducklake.md  file-formats-reference.md  iceberg-tables.md
duckdb_pglake/: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
pg_extension_base/: Makefile  pg_extension_base--1.6--3.1.sql  pg_extension_base--1.6.sql  pg_extension_base--3.2--3.3.sql  pg_extension_base--3.4--3.5.sql  pg_extension_base--3.5--3.6.sql  pg_extension_base.control
pg_extension_updater/: Makefile  pg_extension_updater--3.4--3.5.sql  pg_extension_updater.control
pg_job_scheduler/: Makefile  pg_job_scheduler--1.0.sql  pg_job_scheduler.control
pg_lake/: pg_lake--3.4--3.5.sql  pg_lake.control
pg_lake_benchmark/: Makefile  pg_lake_benchmark--3.3--3.4.sql  pg_lake_benchmark--3.4--3.5.sql  pg_lake_benchmark.control
pg_lake_copy/: Makefile  pg_lake_copy--3.4--3.5.sql  pg_lake_copy.control
pg_lake_ducklake/: Makefile  (+3 more)
pg_lake_sink/: Cargo.toml  DESIGN.md  Makefile  README.md  pg_lake_sink.control
pg_lake_sink/docker/: docker-compose.yml
pg_lake_sink/scripts/: produce.sh
pg_lake_sink/src/: config.rs  copy.rs  ffi.rs  kafka.rs  lib.rs  sink.rs
pg_lake_sink/tests/: conftest.py
pg_lake_sink/tests/pytests/: test_sink.py
(+1028 files in other folders)
